# MinaMesh

./: .env.example  .env.example.devnet  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  context.rs  cspell.json  deno.json  docker-compose.yaml  dprint.json  dprint.jsonc  errors.rs  flake.nix  graphql.config.json  graphql_generated.rs  justfile  main.rs  mina.yaml  mod.rs  rust-toolchain.toml  rustfmt.toml  sandbox.sql  serve.rs  sql_fmt.json  testing.sql  words.txt
.github/: CODEOWNERS
.sqlx/: query-0a081ee673f5ce030186428fd450dd4dd299cad3dd98fbe2608d5b0781eade0c.json  query-0b65330cddad83212aecd633dce025337f205af4dd5291445b38ccf3a6a3c182.json  query-0f977a10c3eca4c85fe33141ef79631097de2065bc65be1a183d0e440d1372c5.json  query-13613d1257a2534e3460d4646183d3b70afd7fb6878d4500190c764cc5275280.json  query-21193630991ce15c085a35fe0457794340f8ff29933f69a80edb321ce4010306.json  query-224763e6406fe607d323cad3ea90873c3944d409ab47789f925291b651e8eff9.json  query-25ad7fc2ddc1cd7395d20ad6bdb0eff7be2108305fe3f0b3bd50fcb258b9b6cd.json  query-2708d8f9bd3d702f9356e68c504762b987db7a345014fe0230d7a15be8e6073d.json  query-2e9a737e25debc3d65d08b0ec9bc6a0baffdccadfb8e439e167ff80404b87b07.json  query-32fb4070f630d7d577d972a59c44a13c3924c0e6d1cf502cdb368140b5a94b39.json  query-35ac7f367917f5825a636814a5018e558b32c88edcd37445aae35e688a412adc.json  query-35e80bb990bf2d6898574d14e7128d3a64ba410aa641f3e07e3a2f7cba3ffdeb.json  query-3601e8af9794936939ec7921e6b5e94106fbcbb53d876cf9ffad52447e78554a.json  query-391efd59ae4d18800d3ed5e1850083a8b5aa335fbb27bd607e546e44e9544e92.json  query-39ef23d0458033aaac5261361369228b7c8b73430fea33364288987abc341995.json  query-3a2c46a59eecd0d9cff884ddeb5dd538291b8fb77dec157395fdfd0abfbd61c9.json  query-3c0c2f8cea55de76397c2107a7d357b8f27ca1df2f412c1b761c7255942d3238.json  query-3ce7f37bd3aad6a704613ac7a4fb115d61ef75ec090a6119856a6e6e6e9ff3a8.json  query-3d53478e256cb25db535e997d26113391f82e7d01a11126bfcebc8a51cfb9986.json  query-411a992540d9c8a1eaa3461adc67005bb4515d21a064c1ad13ab9746e23763da.json  query-42425d0763c334a282e699ed3a10a050798f7561d56b432d3dceb6aea2830a16.json  query-42778b362d013cc8aee326e73238a90bdeaee91872de8c760c19d57e5e2ee477.json  query-42f6465f70b094c9cfe7c9756a326d140a9b58b42ddf9ef4783ca208119b7a09.json  query-434276b23317c196bcfdf461f459044e1530cbfe9fb4984e003280256f9a9b20.json  query-476eb69ab07de896e0f50801665bba3379651cfdfebeacb1c1f603fc55f3e320.json  (+71 more)
graphql/: archive.another.graphql  client.rs  (+13 more)
mesh_generated/: Cargo.toml  README.md
mesh_generated/docs/: AccountApi.md  AccountBalanceRequest.md  AccountBalanceResponse.md  AccountCoinsRequest.md  AccountCoinsResponse.md  AccountIdentifier.md  Allow.md  Amount.md  BalanceExemption.md  Block.md  BlockApi.md  BlockEvent.md  BlockEventType.md  BlockIdentifier.md  BlockRequest.md  BlockResponse.md  BlockTransaction.md  BlockTransactionRequest.md  BlockTransactionResponse.md  CallApi.md  CallRequest.md  CallResponse.md  Case.md  Coin.md  CoinAction.md  CoinChange.md  CoinIdentifier.md  ConstructionApi.md  ConstructionCombineRequest.md  ConstructionCombineResponse.md  ConstructionDeriveRequest.md  ConstructionDeriveResponse.md  ConstructionHashRequest.md  ConstructionMetadataRequest.md  ConstructionMetadataResponse.md  ConstructionParseRequest.md  ConstructionParseResponse.md  ConstructionPayloadsRequest.md  ConstructionPayloadsResponse.md  ConstructionPreprocessRequest.md  (+42 more)
mesh_generated/src/apis/: account_api.rs  block_api.rs  call_api.rs  configuration.rs  construction_api.rs  events_api.rs  mempool_api.rs  mod.rs  network_api.rs  search_api.rs
mesh_generated/src/models/: account_balance_request.rs  account_balance_response.rs  account_coins_request.rs  account_coins_response.rs  account_identifier.rs  allow.rs  amount.rs  balance_exemption.rs  block.rs  block_event.rs  block_event_type.rs  block_identifier.rs  block_request.rs  block_response.rs  block_transaction.rs  block_transaction_request.rs  block_transaction_response.rs  call_request.rs  call_response.rs  case.rs  coin.rs  coin_action.rs  coin_change.rs  coin_identifier.rs  construction_combine_request.rs  construction_combine_response.rs  construction_derive_request.rs  construction_derive_response.rs  construction_hash_request.rs  construction_metadata_request.rs  construction_metadata_response.rs  construction_parse_request.rs  construction_parse_response.rs  construction_payloads_request.rs  construction_payloads_response.rs  construction_preprocess_request.rs  construction_preprocess_response.rs  construction_submit_request.rs  currency.rs  curve_type.rs  (+34 more)
mina_mesh/: Cargo.toml  account.rs  account_balance.rs  balance.rs  balance.test.rs  block.rs  block_transaction.rs  call.rs  common.rs  construction_combine.rs  construction_derive.rs  construction_hash.rs  construction_metadata.rs  construction_parse.rs  construction_payloads.rs  construction_preprocess.rs  construction_submit.rs  mempool.rs  mempool_transaction.rs  mod.rs  network.rs  network_list.rs  network_options.rs  network_status.rs
mina_mesh/.sqlx/: query-0e7051b27b0ac377f73fb99b8ee92d5dc4763558fd76317d786fc94cdf683fdc.json  query-339b7066a2179ec7f71c06592925317e4df9bff8034f205c1b31fbe371226c0b.json  query-572a58e8c0ab3fadf00576f6c58842a8fd3158ecd74903672301f27625a289f7.json  query-5bcb9f38563daa89ebbf5e33665cb1e03a1b43fd9d5f498aa0684a0275743bc8.json  query-e435095fd470db278ed5de94f2b474175bfc3b3063b6cb0aa52f46f3d01693df.json  query-fbd2689d99a7fd2e490f670380718adabd9c47d369bc67466e5e0ca029f2ab0c.json
mina_mesh/sql/: max_canonical_height.sql  query_best.sql  query_both.sql  query_canonical.sql  query_hash.sql  query_pending.sql  user_commands.sql
mina_mesh/util/: mina_account_identifier.rs  mod.rs  network_health_check.rs
mina_mesh_graphql/: Cargo.toml  balance.graphql  block_transactions.graphql  build.rs  client.rs  conversions.rs  generated.rs  mempool_transactions.graphql  mod.rs  network_status.graphql  user_command.graphql
mina_mesh_graphql/schema/: mina_schema.graphql
mina_mesh_server/: Cargo.toml  mod.rs
(+365 files in other folders)
