[package]
name = "mina_mesh"
version = "0.0.0"
authors = ["Mina Foundation"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust Server Implementation of the Mesh Spec for Mina"

[build-dependencies]
anyhow = "1.0.86"
cynic-codegen = "3.7.3"
cynic-querygen = "3.7.3"
indoc = "2.0.5"

[dependencies]
aide = { version = "0.13.4", features = ["scalar"] }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.11", features = ["derive", "env"] }
cynic = { version = "3.7.3", features = ["http-reqwest-blocking"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.30"
mesh = { path = "./mesh_generated" }
paste = "1.0.15"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "json"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
insta = "1.39.0"
tokio = { version = "1.39.2", features = ["full", "test-util"] }
