[package]
name = "mina_mesh"
version = "0.0.0"
authors = ["Mina Foundation"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust Server Implementation of the Mesh Spec for Mina"

[build-dependencies]
anyhow = "1.0.86"
cynic-codegen = "3.7.3"
cynic-querygen = "3.7.3"
indoc = "2.0.5"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
bs58 = "0.5.1"
clap = { version = "4.5.11", features = ["derive", "env"] }
coinbase-mesh = "0.1.1"
convert_case = "0.6.0"
cynic = { version = "3.7.3", features = ["http-reqwest-blocking"] }
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
erased-serde = "0.4.5"
futures = "0.3.31"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.2"
mime = "0.3.17"
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", rev = "872c8f2" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", rev = "872c8f2" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", rev = "872c8f2" }
paste = "1.0.15"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
sha2 = "0.10.8"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "json"] }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
insta = "1.39.0"
tokio = { version = "1.39.2", features = ["full", "test-util"] }
