[package]
name = "mina_mesh"
version = "0.0.0"
authors = ["Mina Foundation"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust Server Implementation of the Mesh Spec for Mina"

[build-dependencies]
anyhow = "1.0.86"
cynic-codegen = "3.7.3"
cynic-querygen = "3.7.3"
indoc = "2.0.5"

[dependencies]
anyhow = "1.0.86"
ark-ff = { version = "0.4.2", features = ["parallel", "asm"] }
axum = { version = "0.7.5", features = ["macros"] }
bitvec = "1.0.1"
bs58 = "0.5.1"
clap = { version = "4.5.11", features = ["derive", "env"] }
coinbase-mesh = "0.1.1"
convert_case = "0.6.0"
cynic = { version = "3.10.0", features = ["http-reqwest-blocking"] }
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
erased-serde = "0.4.5"
futures = "0.3.31"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.2"
mime = "0.3.17"
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "f461b4b" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", rev = "f461b4b" }
mina-p2p-messages = { git = "https://github.com/openmina/openmina", rev = "056deae" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", rev = "f461b4b" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", rev = "f461b4b" }
paste = "1.0.15"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
serde_with = { version = "3.12.0", features = ["json"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "json"] }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", rev = "150ab8d" }
ark-ec = { git = "https://github.com/openmina/algebra", rev = "150ab8d" }
ark-poly = { git = "https://github.com/openmina/algebra", rev = "150ab8d" }
ark-serialize = { git = "https://github.com/openmina/algebra", rev = "150ab8d" }

num-bigint = { git = "https://github.com/openmina/num-bigint", rev = "8bb5ee4" }
num-rational = { git = "https://github.com/openmina/num-rational", rev = "336f11d" }

[dev-dependencies]
insta = "1.39.0"
proptest = "1.6.0"
tokio = { version = "1.39.2", features = ["full", "test-util"] }
