[package]
name = "mesh"
version = "1.4.13"
authors = ["OpenAPI Generator team and contributors"]
edition = "2021"
license = "Apache 2.0"
description = "Build Once. Integrate Your Blockchain Everywhere. "

[dependencies]
reqwest = { version = "^0.12", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
