[package]
name = "mina_mesh"
version.workspace = true
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
mesh = { path = "../mesh_generated" }
mina_mesh = { path = "./mina_mesh" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "json"] }
thiserror = "1.0.63"
