[package]
name = "mina_mesh"
version.workspace = true
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
anyhow = "1.0.86"
cynic = { version = "3.7.3", features = ["http-reqwest-blocking"] }
envy = "0.4.2"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "json"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full", "test-util"] }

mesh = { path = "../mesh_generated" }
mina_mesh_graphql = { path = "../mina_mesh_graphql" }
