[package]
name = "mina_mesh_server"
version.workspace = true
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

mina_mesh = { path = "../mina_mesh" }
paste = "1.0.15"
